# clion_nova_built_dependencies_demo

./: CMakeLists.txt  generated.txt  library.cxx  library.h  standards.txt  unique_name.txt
